tests/elab/fail/multiple_declarations1.t20
;; Data constructors and top-level definition share the same namespace.
(define-datatype Foo [bar])

(define bar 0)
